Update for client and server targets.